# mlb_fantasy_roster_optimizer

./: .gitignore  AGENTS.md  CONTEXT_ROT_RESEARCH.md  OPTIMIZATION_FRAMEWORK.md  README.md  analysis_mew_vs_ew.py  analysis_mew_vs_ew_part2.py  config.json  implementation_spec_v1.md  new_metrics_proposal.md  notebook.py  package-lock.json  pyproject.toml  test_fantrax_api.py  to_discuss.md  trade_engine_implementation_spec_v1.md
dashboard/: app.py  components.py
data_prep/: README.md  pyproject.toml
data_prep/data/: gold_table.csv  gold_table.parquet  optimizer.db  player_ages_test.csv  silver_table.parquet  standings.parquet
data_prep/data/pulled_20260129/: fangraphs-atc-projections-hitters.csv  fangraphs-atc-projections-pitchers.csv  fangraphs-atc-pt-adjusted-hitters.csv  fangraphs-atc-pt-adjusted-pitchers.csv  fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv  fangraphs-thebat-projections-hitters.csv  fangraphs-thebat-projections-pitchers.csv  fangraphs-zips-projections-hitters.csv  fangraphs-zips-projections-pitchers.csv
data_prep/data/pulled_20260323/: fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv
data_prep/data/pulled_20260325/: fangraphs-atc-projections-hitters.csv  fangraphs-atc-projections-pitchers.csv  fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv
data_prep/data/pulled_20260326/: fangraphs-atc-projections-hitters.csv  fangraphs-atc-projections-pitchers.csv  fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv
data_prep/data/pulled_20260330/: fangraphs-atc-projections-hitters.csv  fangraphs-atc-projections-pitchers.csv  fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv
data_prep/data/pulled_20260331/: fangraphs-atc-projections-hitters.csv  fangraphs-atc-projections-pitchers.csv  fangraphs-steamer-projections-hitters.csv  fangraphs-steamer-projections-pitchers.csv
data_prep/data_prep/: __init__.py  build.py  cli.py  config.py  fantrax_api.py  load_projections.py  mlb_api.py  names.py  playing_time.py  scrape_fangraphs.py  silver_io.py
data_prep/docs/: FANGRAPHS_LOADING.md  FANTRAX_API.md  MLB_STATS_API.md  PLAYING_TIME_ADJUSTMENT.md
(+131 files in other folders)
