[project]
name = "data-prep"
version = "0.1.0"
description = "FanGraphs + Fantrax + MLB API silver table pipeline for MLB fantasy roster optimizer"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "MLB-StatsAPI>=1.7",
    "tqdm>=4.65",
    "pyarrow>=14.0",
    "browser-cookie3>=0.20.1",
]

[project.scripts]
build-silver-table = "data_prep.cli:main"
scrape-fangraphs = "data_prep.scrape_fangraphs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_prep"]
